# Dravya

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-workspace.yaml
dravya-core/: .npmignore  Cargo.toml  README.md  SBOM.md
dravya-core/docs/: API_REFERENCE.md
dravya-core/pkg/: LICENSE  dravya_core.d.ts  dravya_core.js  dravya_core_bg.wasm  dravya_core_bg.wasm.d.ts  package.json
dravya-core/src/: data.rs  error.rs  lib.rs
dravya-core/src/compute/: mod.rs  simd_ops.rs  webgpu_engine.rs
dravya-core/src/models/: heston.rs  mod.rs  sabr.rs
dravya-core/src/shaders/: monte_carlo.wgsl
dravya-core/src/systems/: arrow_bridge.rs  concurrency.rs  fix_parser.rs  memory.rs  mod.rs  serialization.rs  streaming.rs
dravya-server/: package-lock.json  package.json  schema.sql
dravya-server/src/: index.ts
dravya-server/tests/: api.test.ts
dravya-web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
dravya-web/public/wasm/: dravya_core_bg.wasm
dravya-web/src/app/: layout.tsx  page.tsx
dravya-web/src/components/: AnalyticsChart.tsx  Axes3D.tsx  FinancialChart.tsx  RiskDashboard.tsx  StreamStatus.tsx  TreeVisualizer.tsx  Visualizer.tsx  VolSurface.tsx
dravya-web/src/components/charts/: GreekSurfaceSliceChart.tsx  MarketDepthChart.tsx  MonteCarloFanChart.tsx  ProbabilityDensityChart.tsx  StrategyPayoffChart.tsx  TermStructureChart.tsx  VolatilitySmileChart.tsx  index.ts
dravya-web/src/hooks/: useWasmStream.ts
dravya-web/src/lib/: syncBus.ts
dravya-web/src/styles/: theme.ts
dravya-web/src/types/: wasm.d.ts
dravya-web/src/utils/: benchmark.ts
