[package]
name = "dravya-core"
version = "0.1.0"
edition = "2021"
description = "High-performance WASM-backed algorithmic and quantitative risk engine"
repository = "https://github.com/ShivamMalge/Dravya"
license = "MIT"
readme = "README.md"
keywords = ["wasm", "algorithms", "quantitative-finance", "options-pricing", "webassembly"]
categories = ["algorithms", "wasm", "finance"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
csv = "1.3"
wgpu = { version = "0.19", features = ["webgpu"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
bytemuck = { version = "1.15", features = ["derive"] }
futures-channel = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Performance", "console"]
