[package]
name = "dravya-core"
version = "0.1.0"
edition = "2021"
description = "High-performance WASM-backed algorithmic and quantitative risk engine"
repository = "https://github.com/ShivamMalge/Dravya"
license = "MIT"
readme = "README.md"
keywords = ["wasm", "algorithms", "quantitative-finance", "options-pricing", "webassembly"]
categories = ["algorithms", "wasm", "finance"]
exclude = [
    "tests/**/*",
    "../../dravya-web/**/*",
    "../../dravya-server/**/*",
    "../../dravya-test/**/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
csv = "1.3"
wgpu = { version = "0.19", features = ["webgpu"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
bytemuck = { version = "1.15", features = ["derive"] }
futures-channel = "0.3"
arrow = { version = "54", default-features = false, features = ["ffi"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
bytes = "1.5"
rkyv = { version = "0.7", features = ["validation", "alloc", "std"] }
rayon = "1.8"
wasm-bindgen-rayon = { version = "1.2" }
prost = "0.12"
tonic = { version = "0.11", default-features = false, features = ["prost"] }
tonic-web-wasm-client = "0.5"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Performance", "console", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType", "Request", "RequestInit", "RequestMode", "Response"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
